--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: pip install --upgrade pip wheel
-      - run: pip install bandit black codespell flake8, flake8-comprehensions isort
+      - run: pip install bandit black codespell flake8 flake8-comprehensions isort
                          mypy pytest pyupgrade safety  # flake8-bugbear
       - run: bandit --recursive --skip B101 .  # B101 is assert statements
       - run: black --check . || true
