--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -10,14 +10,13 @@ jobs:
       - run: pip install bandit black codespell flake8 flake8-bugbear isort
                          mypy pytest pyupgrade safety  # flake8-comprehensions
       - run: bandit --recursive --skip B101 .  # B101 is assert statements
-      - run: black --check . || true
+      - run: black --check --skip-string-normalization .
       - run: codespell
       - run: flake8 . --count --max-complexity=18 --max-line-length=88 --show-source --statistics
-      - run: isort --check-only --profile black . || true
+      - run: isort --check-only --profile black .
       - run: pip install -r requirements.txt
       - run: mkdir --parents --verbose .mypy_cache
       - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
-      - run: pytest . || pytest --doctest-modules . || true
       - run: pytest run_tests.py --cov flake8_builtins --cov-report term-missing
       - run: coveralls || true
       - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
