--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -17,6 +17,7 @@ jobs:
       - run: pip install -r requirements.txt
       - run: mkdir --parents --verbose .mypy_cache
       - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
+      - run: pytest --version
       - run: pytest run_tests.py --cov flake8_builtins --cov-report term-missing
       - run: coveralls || true
       - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
