--- a/requirements.in
+++ b/requirements.in
@@ -11,10 +11,7 @@ flake8-print
 flake8-quotes
 flake8-string-format
 flake8-todo
-futures; python_version < '3.0'
-mock ; python_version < '3.0'
-pytest<5; python_version < '3.0'
-pytest>5; python_version >= '3.0'
+pytest
 pytest-cov
 more-itertools==5.0.0
-zipp ; python_version >= '3.0'
+zipp
