--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,62 +1,58 @@
-name: ci
+name: Testing
 on: [pull_request, push]
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   test:
+    name: Testing on
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        config:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "pypy-3.9"
-    runs-on: ubuntu-latest
-    name: ${{matrix[1]}}
+        python-version: [3.9, 3.8, 3.7, pypy-3.9]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.config }}
+          python-version: ${{ matrix.python-version }}
       - name: Cache packages
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.config }}-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-${{ matrix.config }}-
+            ${{ runner.os }}-pip-${{ matrix.python-version }}-
       - name: pip version
         run: pip --version
       - name: Install dependencies
         run: python -m pip install -r requirements.txt
       # formatters
       - name: Run pyupgrade
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: pyupgrade --py37-plus *.py
       - name: Run isort
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: isort --check-only *.py
       - name: Run black
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: black --check --skip-string-normalization *.py
       # linters
       - name: Lint with bandit
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: bandit --skip B101 *.py  # B101 is assert statements
       - name: Lint with codespell
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: codespell *.rst *.py
       - name: Lint with flake8
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: flake8 *.py --count --max-complexity=18 --max-line-length=88 --show-source --statistics
       - name: Lint with mypy
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: |
           mkdir --parents --verbose .mypy_cache
           mypy --ignore-missing-imports --install-types --non-interactive *.py || true
       - name: Lint with safety
-        if: matrix.config == '3.9'
+        if: matrix.python-version == '3.9'
         run: safety check  || true
       # tests and coverage
       - name: Test
