--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -1,23 +1,65 @@
-name: lint_python
+name: ci
 on: [pull_request, push]
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
-  lint_python:
+  test:
+    strategy:
+      matrix:
+        config:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "pypy-3.9"
     runs-on: ubuntu-latest
+    name: ${{matrix[1]}}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - run: pip install --upgrade pip wheel
-      - run: pip install bandit black codespell flake8 flake8-bugbear isort
-                         mypy pytest pyupgrade safety  # flake8-comprehensions
-      - run: bandit --recursive --skip B101 .  # B101 is assert statements
-      - run: black --check --skip-string-normalization .
-      - run: codespell
-      - run: flake8 . --count --max-complexity=18 --max-line-length=88 --show-source --statistics
-      - run: isort --check-only --profile black .
-      - run: pip install -r requirements.txt
-      - run: mkdir --parents --verbose .mypy_cache
-      - run: mypy --ignore-missing-imports --install-types --non-interactive . || true
-      - run: pytest run_tests.py --cov flake8_builtins --cov-report term-missing
-      - run: coveralls || true
-      - run: shopt -s globstar && pyupgrade --py36-plus **/*.py || true
-      - run: safety check || true
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.config }}
+      - name: Cache packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ matrix.config }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ matrix.config }}-
+      - name: pip version
+        run: pip --version
+      - name: Install dependencies
+        run: python -m pip install -r requirements.txt
+      # formatters
+      - name: Run pyupgrade
+        if: matrix.config == '3.9'
+        run: pyupgrade --py37-plus *.py
+      - name: Run isort
+        if: matrix.config == '3.9'
+        run: isort --check-only *.py
+      - name: Run black
+        if: matrix.config == '3.9'
+        run: black --check --skip-string-normalization *.py
+      # linters
+      - name: Lint with bandit
+        if: matrix.config == '3.9'
+        run: bandit --skip B101 *.py  # B101 is assert statements
+      - name: Lint with codespell
+        if: matrix.config == '3.9'
+        run: codespell *.rst *.py
+      - name: Lint with flake8
+        if: matrix.config == '3.9'
+        run: flake8 *.py --count --max-complexity=18 --max-line-length=88 --show-source --statistics
+      - name: Lint with mypy
+        if: matrix.config == '3.9'
+        run: |
+          mkdir --parents --verbose .mypy_cache
+          mypy --ignore-missing-imports --install-types --non-interactive *.py || true
+      - name: Lint with safety
+        if: matrix.config == '3.9'
+        run: safety check  || true
+      # tests and coverage
+      - name: Test
+        run: pytest run_tests.py --cov --cov-report term-missing
+      - name: Coverage
+        run: coveralls --service=github
