--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,6 +29,10 @@ jobs:
       - name: pip version
         run: pip --version
       - name: Install dependencies
+        if: matrix.python-version == '3.9'
+        run: python -m pip install -r requirements-lint.txt
+      - name: Install dependencies
+        if: matrix.python-version != '3.9'
         run: python -m pip install -r requirements.txt
       # formatters
       - name: Run pyupgrade
