--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ coveralls==3.3.1
     # via -r requirements.in
 docopt==0.6.2
     # via coveralls
+exceptiongroup==1.0.0
+    # via pytest
 flake8==5.0.4
     # via -r requirements.in
 idna==3.4
@@ -36,15 +38,13 @@ packaging==21.3
     # via pytest
 pluggy==1.0.0
     # via pytest
-py==1.11.0
-    # via pytest
 pycodestyle==2.9.1
     # via flake8
 pyflakes==2.5.0
     # via flake8
 pyparsing==3.0.9
     # via packaging
-pytest==7.1.3
+pytest==7.2.0
     # via
     #   -r requirements.in
     #   pytest-cov
