--- a/requirements-lint.in
+++ b/requirements-lint.in
@@ -14,9 +14,8 @@ flake8-quotes
 flake8-todo
 importlib-metadata; python_version < '3.8'
 isort
-mypy
 pytest
 pytest-cov
 pyupgrade
-typed-ast; python_version < '3.8'  # dependency of black and mypy
+typed-ast; python_version < '3.8'  # dependency of black
 zipp; python_version < '3.8'  # dependency of importlib-metadata
