--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.12.0-beta.2", "3.11", "3.10", 3.9, 3.8, pypy-3.9]
+        python-version: ["3.12", "3.11", "3.10", 3.9, 3.8, pypy-3.9]
         os: ["ubuntu-22.04"]
         include:
           - os: "ubuntu-latest"
