fix: add missing dependency

--- a/tox.ini
+++ b/tox.ini
@@ -44,6 +44,7 @@ description = get a test coverage report
 use_develop = true
 skip_install = false
 deps =
+    pytest-cov
     coverage
 commands =
     pytest run_tests.py --cov --cov-report term-missing
