--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", pypy-3.9]
+        python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "pypy-3.10"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
